# snake_game

./: CMakeLists.txt  Main.cpp  README.md  resize.scpt  run.sh  test.sh
include/: controller.hpp  game.h  game_element.hpp  game_food.hpp  game_map.hpp  game_snake.h  game_status.hpp  game_wall.hpp  game_welcome.hpp  initializer.hpp  position.hpp  render.hpp  size.hpp  snake.h  welcome.hpp  window.hpp
src/: controller.cpp  game.cpp  game_element.cpp  game_food.cpp  game_map.cpp  game_snake.cpp  game_status.cpp  game_wall.cpp  game_welcome.cpp  initializer.cpp  position.cpp  render.cpp  size.cpp  snake.cpp  welcome.cpp  window.cpp
test/: game_test.cpp
